Downloads list page extra padding fix

--- a/app/src/main/res/scss/download-list-page.scss
+++ b/app/src/main/res/scss/download-list-page.scss
@@ -1,6 +1,4 @@
 .download-list-page {
-  padding: 30px;
-
   .filter-state {
     display: flex;
     justify-content: center;
